hphp/hack/test/typecheck/interface_implement.php.exp
File "interface_implement.php", line 8, characters 1-98:
Interfaces may not implement other interfaces or classes (Parsing[1002])
